Adds links to the resports of Stefan and Lukas.

--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -123,6 +123,7 @@ Finally, conclusions are drawn in section \ref{conclusion}.
 \section{Related work}
 \label{related-work}
 
+
 \subsection{Linked Universities}
 \label{related-work:linked-universities}
 'Linked Universities' is "`\textit{an alliance of european universities engaged into exposing their public data as linked data}"'\footnote{\cite{url:linkeduniversities}} providing help and knowledge for other universities that wish to expose their public university resources as Linked Data. Addressing the problem of connecting data and developing new sites by inexperienced universities, the alliance provide information so they don't have to be re-learned. For this purpose the Linked Universities offering a portal as collaborative space with common vocabularies and practices for reusing, describing and sharing.
@@ -176,7 +177,7 @@ Linked~Education represents the idea of using Linked~Data principles for educati
 \label{lod-benefits-challenges}
 As mentioned in the introduction, we identified \textit{students}, \textit{researchers} and \textit{administration employees} as import stakeholders at a university. This chapter describes the methodology and results of the conducted case study, where \textit{students} and persons affiliated with \textit{student affairs} at the Vienna University of Technology were the case. The essential question of the case study was RQ2; what are the major benefits and challenges for students if certain university resources are published as Linked Open Data and which needful use cases can result out of this from the perspective of the students. RQ3 played a minor role in the case study, because \textit{students} are in general on the consuming side of information technology at a university. However, there are \textit{students} that are operating information systems (e.g. wikis or internet forums), which collect a not insignificant amount of knowledge, which is why this research question was also of interest. The case study was conducted at the Vienna University of Technology, where teaching and research is focused on engineering and natural science.  It has several faculties including Computer Sciences and Electrical Engineering \& Information Technology, which is exactly why the exploration of the willingness of students to develop applications based on LOD was also a goal. \textbf{5} participants from student representatives, teaching \& administration personnel to ordinary students participated in the case study.
 
-A case study concerning \textit{researchers} was conducted by Lukas Baronyai $<link>$ and another one concerning \textit{administration employees} by Stefan Gamerith $<link>$. 
+A case study concerning \textit{researchers} was conducted by Lukas Baronyai \cite{baronyai_publishing_2016} and another one concerning \textit{administration employees} by Stefan Gamerith \cite{gamerith_linked_2016}. 
 
 The first section describes the applied methodology (see \ref{lod-benefits-challenges:methodology}). The results are split in three sections; the first one describes the background of the interviewees (see \ref{lod-benefits-challenges:interviewees}). The second one describes the proposed use cases and the evaluated acceptance of them as well as examined additional use cases and requested datasets (see \ref{lod-benefits-challenges:explored-needs-usecases}). The third section shows the result of the evaluated willingness of the interviewees to develop applications based on Linked Open Data provided by the university (see \ref{lod-benefits-challenges:playground}).
 
