--- a/literature.bib
+++ b/literature.bib
@@ -13,11 +13,10 @@
 	year = {2009}
 }
 
-@inproceedings{zablith_consuming_2011,
-	address = {Bonn, Germany},
-	title = {Consuming {Linked} {Data} within a {Large} {Educational} {Organization}},
-	author = {Zablith, Fouad and d’Aquin, Mathieu and Brown, Stuart and Green-Hughes, Liam},
-	year = {2011}
+@misc{center_for_history_and_new_media_schnelleinstieg_????,
+	title = {Schnelleinstieg},
+	url = {http://zotero.org/support/quick_start_guide},
+	author = {{Center for History and New Media}}
 }
 
 @book{heath_linked_2011,
@@ -28,6 +27,12 @@
 	year = {2011}
 }
 
+@article{baronyai_publishing_2016,
+	title = {Publishing {TUWien} {Data} as {Linked} {Open} {Data}},
+	author = {Baronyai, Lukas},
+	year = {2016}
+}
+
 @article{runeson_guidelines_2008,
 	title = {Guidelines for conducting and reporting case study research in software engineering},
 	volume = {Empir Software Eng (2009)},
@@ -35,4 +40,69 @@
 	author = {Runeson, Per and Höst, Martin},
 	year = {2008},
 	pages = {131--164}
+}
+
+@misc{_case_????,
+	title = {Case {Study}: {A} {Linked} {Open} {Data} {Resource} {List} {Management} {Tool} for {Undergraduate} {Students}},
+	url = {http://www.w3.org/2001/sw/sweo/public/UseCases/Talis/},
+	urldate = {2015-10-26},
+	file = {Case Study\: A Linked Open Data Resource List Management Tool for Undergraduate Students:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/3MXB9D44/Talis.html:text/html}
+}
+
+@article{bizer_linked_2009-1,
+	title = {Linked {Data} - {The} {Story} {So} {Far}},
+	journal = {International Journal on Semantic Web and Information Systems},
+	author = {Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
+	year = {2009}
+}
+
+@misc{_semantic_????,
+	title = {Semantic {Web} - {W}3C},
+	url = {http://www.w3.org/standards/semanticweb/},
+	urldate = {2015-10-26},
+	file = {Semantic Web - W3C:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/ID2KKXF3/semanticweb.html:text/html}
+}
+
+@article{__????
+}
+
+@misc{_open_????,
+	title = {The {Open} {Definition} - {Open} {Definition} - {Defining} {Open} in {Open} {Data}, {Open} {Content} and {Open} {Knowledge}},
+	url = {http://opendefinition.org/},
+	urldate = {2015-10-23},
+	file = {The Open Definition - Open Definition - Defining Open in Open Data, Open Content and Open Knowledge:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/879JEM4N/opendefinition.org.html:text/html}
+}
+
+@misc{_europeana_????,
+	title = {Europeana - {Homepage}},
+	url = {http://www.europeana.eu/portal/},
+	urldate = {2015-10-26},
+	file = {Europeana - Homepage:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/5K9NR3JV/portal.html:text/html}
+}
+
+@misc{_bowlogna_????,
+	title = {Bowlogna {\textbar}},
+	url = {http://diuf.unifr.ch/main/xi/bowlogna},
+	urldate = {2015-11-01},
+	file = {Bowlogna |:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/63DQMEJ9/bowlogna.html:text/html}
+}
+
+@misc{_semantic-web-grundlagen_????,
+	title = {Semantic-{Web}-{Grundlagen}},
+	url = {http://www.semantic-web-grundlagen.de/},
+	urldate = {2015-10-16},
+	file = {Semantic-Web-Grundlagen:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/P5XZBEVR/www.semantic-web-grundlagen.de.html:text/html}
+}
+
+@article{gamerith_linked_2016,
+	title = {Linked {Open} {Data} in {Administration} at the {Vienna} {University} of {Technology}},
+	author = {Gamerith, Stefan},
+	year = {2016}
+}
+
+@inproceedings{zablith_consuming_2011,
+	address = {Bonn, Germany},
+	title = {Consuming {Linked} {Data} within a {Large} {Educational} {Organization}},
+	author = {Zablith, Fouad and d’Aquin, Mathieu and Brown, Stuart and Green-Hughes, Liam},
+	year = {2011}
 }
