Adds literature references of Lukas and Stefan.

--- a/literature.bib
+++ b/literature.bib
@@ -13,10 +13,11 @@
 	year = {2009}
 }
 
-@misc{center_for_history_and_new_media_schnelleinstieg_????,
-	title = {Schnelleinstieg},
-	url = {http://zotero.org/support/quick_start_guide},
-	author = {{Center for History and New Media}}
+@inproceedings{zablith_consuming_2011,
+	address = {Bonn, Germany},
+	title = {Consuming {Linked} {Data} within a {Large} {Educational} {Organization}},
+	author = {Zablith, Fouad and d’Aquin, Mathieu and Brown, Stuart and Green-Hughes, Liam},
+	year = {2011}
 }
 
 @book{heath_linked_2011,
@@ -25,12 +26,6 @@
 	publisher = {Morgan \& Claypool},
 	author = {Heath, Tom and Bizer, Christian},
 	year = {2011}
-}
-
-@article{baronyai_publishing_2016,
-	title = {Publishing {TUWien} {Data} as {Linked} {Open} {Data}},
-	author = {Baronyai, Lukas},
-	year = {2016}
 }
 
 @article{runeson_guidelines_2008,
@@ -42,67 +37,68 @@
 	pages = {131--164}
 }
 
-@misc{_case_????,
-	title = {Case {Study}: {A} {Linked} {Open} {Data} {Resource} {List} {Management} {Tool} for {Undergraduate} {Students}},
-	url = {http://www.w3.org/2001/sw/sweo/public/UseCases/Talis/},
-	urldate = {2015-10-26},
-	file = {Case Study\: A Linked Open Data Resource List Management Tool for Undergraduate Students:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/3MXB9D44/Talis.html:text/html}
-}
-
-@article{bizer_linked_2009-1,
-	title = {Linked {Data} - {The} {Story} {So} {Far}},
-	journal = {International Journal on Semantic Web and Information Systems},
-	author = {Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
-	year = {2009}
-}
-
-@misc{_semantic_????,
-	title = {Semantic {Web} - {W}3C},
-	url = {http://www.w3.org/standards/semanticweb/},
-	urldate = {2015-10-26},
-	file = {Semantic Web - W3C:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/ID2KKXF3/semanticweb.html:text/html}
-}
-
-@article{__????
-}
-
-@misc{_open_????,
-	title = {The {Open} {Definition} - {Open} {Definition} - {Defining} {Open} in {Open} {Data}, {Open} {Content} and {Open} {Knowledge}},
-	url = {http://opendefinition.org/},
-	urldate = {2015-10-23},
-	file = {The Open Definition - Open Definition - Defining Open in Open Data, Open Content and Open Knowledge:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/879JEM4N/opendefinition.org.html:text/html}
-}
-
-@misc{_europeana_????,
-	title = {Europeana - {Homepage}},
-	url = {http://www.europeana.eu/portal/},
-	urldate = {2015-10-26},
-	file = {Europeana - Homepage:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/5K9NR3JV/portal.html:text/html}
-}
-
-@misc{_bowlogna_????,
-	title = {Bowlogna {\textbar}},
-	url = {http://diuf.unifr.ch/main/xi/bowlogna},
-	urldate = {2015-11-01},
-	file = {Bowlogna |:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/63DQMEJ9/bowlogna.html:text/html}
-}
-
-@misc{_semantic-web-grundlagen_????,
-	title = {Semantic-{Web}-{Grundlagen}},
-	url = {http://www.semantic-web-grundlagen.de/},
-	urldate = {2015-10-16},
-	file = {Semantic-Web-Grundlagen:/home/haller/.mozilla/firefox/da65lf10.default/zotero/storage/P5XZBEVR/www.semantic-web-grundlagen.de.html:text/html}
-}
-
 @article{gamerith_linked_2016,
 	title = {Linked {Open} {Data} in {Administration} at the {Vienna} {University} of {Technology}},
 	author = {Gamerith, Stefan},
 	year = {2016}
 }
 
-@inproceedings{zablith_consuming_2011,
-	address = {Bonn, Germany},
-	title = {Consuming {Linked} {Data} within a {Large} {Educational} {Organization}},
-	author = {Zablith, Fouad and d’Aquin, Mathieu and Brown, Stuart and Green-Hughes, Liam},
-	year = {2011}
+@article{baronyai_publishing_2016,
+	title = {Publishing {TUWien} {Data} as {Linked} {Open} {Data}},
+	author = {Baronyai, Lukas},
+	year = {2016}
+}
+
+@article{janssen_benefits_2012,
+	title = {Benefits, adoption barriers and myths of open data and open government},
+	volume = {29},
+	number = {4},
+	journal = {Information Systems Management},
+	author = {Janssen, Marijn and Charalabidis, Yannis and Zuiderwijk, Anneke},
+	year = {2012},
+	pages = {258--268}
+}
+
+@techreport{jacobs_architecture_2004,
+	type = {W3C:rec},
+	title = {Architecture of the {World} {Wide} {Web}, {Volume} {One}},
+	url = {http://www.w3.org/TR/2004/REC-webarch-20041215/},
+	institution = {W3C},
+	author = {Jacobs, Ian and Walsh, Norman},
+	month = dec,
+	year = {2004},
+	note = {http://www.w3.org/TR/2004/REC-webarch-20041215/}
+}
+
+@book{daquin_members_2014,
+	title = {Members of {Linked} {Universities}},
+	url = {http://linkeduniversities.org/lu/index.php/members/index.html},
+	author = {d'Aquin, Mathieu and Kessler, Carsten and Kauppinen, Tomi},
+	year = {2014},
+	note = {[accessed 8-February-2016]}
+}
+
+@article{berners-lee_linked_2006,
+	title = {Linked {Data} - {Design} {Issues}},
+	url = {http://www.w3.org/DesignIssues/LinkedData.html},
+	number = {09/20},
+	journal = {W3C},
+	author = {Berners-Lee, Tim},
+	year = {2006}
+}
+
+@book{daquin_linked_2014,
+	title = {Linked {Universities}},
+	url = {http://linkeduniversities.org/index.html},
+	author = {d'Aquin, Mathieu and Kessler, Carsten and Kauppinen, Tomi},
+	year = {2014},
+	note = {[accessed 24-February-2016]}
+}
+
+@book{daquin_lucero_2010,
+	title = {{LUCERO} - {Aims}, {Objectives} and {Final} {Outputs} of the {Project}},
+	url = {http://lucero-project.info/lb/2010/06/lucero-aims-objectives-and-final-outputs-of-the-project/index.html},
+	author = {d'Aquin, Mathieu and Zablith, Fouad and Motta, Enrico and Stephens, Owen and Brown, Stuart and Elahi, Salman and Nurse, Richard},
+	year = {2010},
+	note = {[accessed 29-February-2016]}
 }
