--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -30,14 +30,7 @@
 \maketitle
 
 \begin{abstract}
-The abstract goes here.\\
- \\
- \\
- \\
- \\
- \\
- \\
- \\
+The abstract goes here.
 \end{abstract}
 
 \smallskip
@@ -61,16 +54,16 @@ The abstract goes here.\\
 
 \section{Introduction}
 \label{introduction}
-While the pressure on governments and public organizations to release \textit{Open~Data} has significantly grown with the spread of information systems, there has been also a need for \textit{linking} these data from various sources to understand the information as a whole.
+While the pressure on governments and public organizations to release \textit{Open Data} has significantly grown with the spread of information systems, there has been also a need for \textit{linking} these data from various sources to understand the information as a whole.
 
-Open Data includes non-privacy-restricted and non-confidential data. Therefore any restrictions in distribution are prohibited and data is funded only by public money.~\cite{article:janssen2012benefits} The application domain for Open Data providers is not restricted by its nature in any way and ranges from traffic, weather, statictics to budgeting in the public sector. Just the publication of Open Data seems not enough but in addition the implementation of a feedback loop result in \textit{Open Government}. This has the advantage of a constant adaption to the citizen's needs instead of just visualizing former closed data. 
+Open Data includes non-privacy-restricted and non-confidential data. Therefore any restrictions in distribution are prohibited and data is funded only by public money.~\cite{janssen_benefits_2012} The application domain for Open Data providers is not restricted by its nature in any way and ranges from traffic, weather, statistics to budgeting in the public sector. Just the publication of Open Data seems not enough but in addition the implementation of a feedback loop result in \textit{Open Government}. This has the advantage of a constant adoption to the citizen's needs instead of just visualizing former closed data. 
 
-Despite its wide adoption of Open Data it does restrict the published Data format in any way, thus complicating the integration of heterogeneous data sets. The World Wide Web has proven great success spreading knowledge of various data sources all over the world. The building block of the Web are documents and links connecting them to form a global information space. This can be seen as the key success factor in its nearly unconstrained growth~\cite{report:jacobs-i-2004--a}. 
+Despite its wide adoption of Open Data it does restrict the published Data format in any way, thus complicating the integration of heterogeneous data sets. The World Wide Web has proven great success spreading knowledge of various data sources all over the world. The building block of the Web are documents and links connecting them to form a global information space. This can be seen as the key success factor in its nearly unconstrained growth~\cite{jacobs_architecture_2004}. 
 Following these principles of publishing and connecting data on the Web is known as \textit{Linked~Data}. More technically, it refers to machine-readable data which is linked to external data sets and can in turn be linked from other data sets. 
 
-\cite{artivle:bernerslee-t-2006-1} developed a five star rating scheme for classifying \textit{Linked Open Data}, which combines Linked Data and Open Data. The scheme ranges from one star describing Open Data only to five stars describing Open Data in a machine-readable format using open standards with links to other data sets.
+\cite{berners-lee_linked_2006} developed a five star rating scheme for classifying \textit{Linked Open Data}, which combines Linked Data and Open Data. The scheme ranges from one star describing Open Data only to five stars describing Open Data in a machine-readable format using open standards with links to other data sets.
 
-Although Linked~Open~Data offer universities new opportunities for providing unprecedented insight into its core activities and ease application development, a major \textbf{problem} is that \textbf{Linked~Open~Data has not been widely adopted by universities yet}. Even tough there are a few examples~\cite{url:linked-universities-members} of publishing university related data as Linked~Open~Data, there has been little knowledge of using Linked~Open~Data for publishing university related information. 
+Although Linked~Open~Data offer universities new opportunities for providing unprecedented insight into its core activities and ease application development, a major \textbf{problem} is that \textbf{Linked~Open~Data has not been widely adopted by universities yet}. Even tough there are a few examples~\cite{daquin_members_2014} of publishing university related data as Linked~Open~Data, there has been little knowledge of using Linked~Open~Data for publishing university related information. 
 
 The remainder of this section states the addressed research question of this paper, describes the contributions in the course of investigating the research questions and gives an overview of the structure of this paper.
 
@@ -83,7 +76,7 @@ The fundamental research questions underlying this paper is:
 \end{displayquote}
 More concrete this paper concentrates on the following specific research questions:
 \paragraph{Q1: What are best practices regarding the applicability of Linked Open Data in university settings?}
-As of now, there are no established best practices for the use of Linked Open Data due to its little adoption in university contexts. For this very reason it is crucial to identify strengths and limitation from previous experiences~\cite{url:linked-universities-members} of using Linked~Open~Data as core technology. 
+As of now, there are no established best practices for the use of Linked Open Data due to its little adoption in university contexts. For this very reason it is crucial to identify strengths and limitation from previous experiences~\cite{daquin_members_2014} of using Linked~Open~Data as core technology. 
 \paragraph{Q2: What are major benefits and barriers for each stakeholder and what are useful use cases?}
 We identified three different stakeholders in university context \textit{Students}, \textit{Researchers} and \textit{Administration staff}. Since the success of any new technology highly depends on the acceptance of the stakeholders, the needs of each of the target groups needs to be examined. Furthermore, use cases are important to showcase profits and shortcomings to a non-technical audience. 
 \paragraph{Q3: What are major challenges for the implementation of a Linked Open Data~solution?}
@@ -126,9 +119,9 @@ Finally, conclusions are drawn in section \ref{conclusion}.
 
 \subsection{Linked Universities}
 \label{related-work:linked-universities}
-'Linked Universities' is "`\textit{an alliance of european universities engaged into exposing their public data as linked data}"'\footnote{\cite{url:linkeduniversities}} providing help and knowledge for other universities that wish to expose their public university resources as Linked Data. Addressing the problem of connecting data and developing new sites by inexperienced universities, the alliance provide information so they don't have to be re-learned. For this purpose the Linked Universities offering a portal as collaborative space with common vocabularies and practices for reusing, describing and sharing.
+'Linked Universities' is "`\textit{an alliance of european universities engaged into exposing their public data as linked data}"'\footnote{\cite{daquin_linked_2014}} providing help and knowledge for other universities that wish to expose their public university resources as Linked Data. Addressing the problem of connecting data and developing new sites by inexperienced universities, the alliance provide information so they don't have to be re-learned. For this purpose the Linked Universities offering a portal as collaborative space with common vocabularies and practices for reusing, describing and sharing.
 
-Their goals are:(~\cite{url:linkeduniversities})
+Their goals are:(~\cite{daquin_linked_2014})
 
 \begin{itemize}
 \item "`Identify, support and develop common linked data vocabularies, usable accross universities for common concepts such as courses, qualifications, educational material, etc."'
@@ -136,7 +129,7 @@ Their goals are:(~\cite{url:linkeduniversities})
 \item "`Support, through experience sharing and reuse, initiatives towards exposing university data as linked data"'
 \end{itemize}
 
-The members of this alliance are:(~\cite{url:linked-universities-members})
+The members of this alliance are:(~\cite{daquin_members_2014})
 \begin{itemize}
 	\item The Open University, UK
 	\item University of Münster, Germany
@@ -150,7 +143,7 @@ The members of this alliance are:(~\cite{url:linked-universities-members})
 \end{itemize}
 
 \subsubsection{Example: The Open University and the LUCERO Project}
-LUCERO (Linking University Content for Education and Research Online) was a project from the Open University, funded for 1 year by the JISC Information Environment 2011 Programme under the call Deposit of research outputs and Exposing digital content for education and research. Aim of the project was to "` \textit{ scope, prototype, pilot and evaluate reusable, cost-effective solutions relying on linked data for exposing and connecting educational and research content}"'.\cite{url:lucero} The projects connected with other organizations through LinkedUniversities.org to gather common issues and practices. The outcome was the first university linked data platform, \url{http://data.open.ac.uk/}, with much impact on The Open University and the education community.
+LUCERO (Linking University Content for Education and Research Online) was a project from the Open University, funded for 1 year by the JISC Information Environment 2011 Programme under the call Deposit of research outputs and Exposing digital content for education and research. Aim of the project was to "` \textit{ scope, prototype, pilot and evaluate reusable, cost-effective solutions relying on linked data for exposing and connecting educational and research content}"'.\cite{daquin_lucero_2010} The projects connected with other organizations through LinkedUniversities.org to gather common issues and practices. The outcome was the first university linked data platform, \url{http://data.open.ac.uk/}, with much impact on The Open University and the education community.
 
 \subsection{Austrian Open Data}
 \label{related-work:austrian-open-data}
@@ -179,7 +172,7 @@ As mentioned in the introduction, we identified \textit{students}, \textit{resea
 
 A case study concerning \textit{researchers} was conducted by Lukas Baronyai \cite{baronyai_publishing_2016} and another one concerning \textit{administration employees} by Stefan Gamerith \cite{gamerith_linked_2016}. 
 
-The first section describes the applied methodology (see \ref{lod-benefits-challenges:methodology}). The results are split in three sections; the first one describes the background of the interviewees (see \ref{lod-benefits-challenges:interviewees}). The second one describes the proposed use cases and the evaluated acceptance of them as well as examined additional use cases and requested datasets (see \ref{lod-benefits-challenges:explored-needs-usecases}). The third section shows the result of the evaluated willingness of the interviewees to develop applications based on Linked Open Data provided by the university (see \ref{lod-benefits-challenges:playground}).
+The first section describes the applied methodology (see \ref{lod-benefits-challenges:methodology}). The results are split in three sections; the first one describes the background of the interviewees (see \ref{lod-benefits-challenges:interviewees}). The second one describes the proposed use cases and the evaluated acceptance of them as well as examined additional use cases and requested datasets (see \ref{lod-benefits-challenges:explored-needs-usecases}). The third section shows the result of the evaluated willingness of the interviewees to develop applications based on Linked Open Data provided by the university (see \ref{lod-benefits-challenges:adoption-potential}).
 
 \subsection{Methodology}
 \label{lod-benefits-challenges:methodology}
@@ -307,8 +300,8 @@ TISS already provides a calendar with the dates of all favoured courses, but the
 
 \paragraph{Event calendar:} Same as with course information, the information about events that are going to take place at the university are separated over different sources in dependence on which organizational unit organizes the event. \textit{\textbf{D}} would like to have a calendar for all events. It shall be possible to filter the events by categories/organizational units. This idea is similar to the event calendar of the University of Southampton\footnote{\url{http://www.events.soton.ac.uk/}}. At the moment of writing, the events are often announced to the students per email, flyers or by word-of-mouth recommendations including social networks. It is likely to oversee events in which you are potentially interested in. \textit{\textbf{D}} would also like to have an event calendar that can be synchronized with the own calendar using the mentioned filter.
 
-\subsection{Playground}
-\label{lod-benefits-challenges:playground}
+\subsection{Adoption potential}
+\label{lod-benefits-challenges:adoption-potential}
 The interviewees were also asked about their willingness to develop applications based on Linked Open Data provided by the university. 
 
 \textit{\textbf{A}} is willing to develop applications based on Linked Open Data, if a comprehensive documentation is provided for application developers and would in this case see a playground for other students of informatics. \textit{\textbf{A}} is a student representative and manages some valuable information for the students. \textit{\textbf{A}} pointed out that a provision of some of this information as Linked Open Data may cause a disproportionate amount of work and maintenance burden, when questioned about it, but is open to it.
@@ -372,7 +365,7 @@ Dependent on the format of the dataset, the data transformer can either be a pro
 \paragraph{The development of LOD applications}
 \label{technical-architecture-challenges:lod-effort:dev-app}
 can emerge at a university, if potential initiators see a requirement for their idea of an application (meets user requirements that are not satisfied by the current information environment) and if the datasets of the resources required for such an application have already been exposed or they are going to be exposed in near future. The evolvement of an environment, where new LOD applications are initiated, assumes incentives for the \textit{development teams}. At a university with researchers and students in the field of informatics as potential \textit{developers}, joy and acknowledgement may be an incentive, beside the monetization
-of the work like through university aid, donors or advertisements. This particular issue was part of the interviews with the students and the results can be seen in section \ref{lod-benefits-challenges:playground}.
+of the work like through university aid, donors or advertisements. This particular issue was part of the interviews with the students and the results can be seen in section \ref{lod-benefits-challenges:adoption-potential}.
 
 \begin{itemize}
 \item \textit{Application developer}~\\
