Adds euclid reference for the architecture.

--- a/literature.bib
+++ b/literature.bib
@@ -102,3 +102,12 @@
 	year = {2010},
 	note = {[accessed 29-February-2016]}
 }
+
+@book{simperl_using_2013,
+	title = {Using {Linked} {Data} {Effectively}},
+	isbn = {978-1-78007-926-4},
+	url = {http://www.euclid-project.eu/},
+	publisher = {The Open University},
+	author = {Simperl, E. and Norton, B. and Maleshkova, M. and Domingue, J. and Mikroyannidis, A. and Mulholland, P. and Power, R.},
+	year = {2013}
+}
