--- a/seminar-work-linked-open-data.tex
+++ b/seminar-work-linked-open-data.tex
@@ -375,7 +375,6 @@ The application developer has the essential expertise for building software appl
 An expert, who has expertise about Linked Data and the supporting frameworks of the used programming language, is inevitable, when developing an application based on Linked Data. Whereas the idea of Linked Data is around for while now, common application developers may not be familiar with this technology to an extent that they can develop a reliable application based on it. The level of the required expertise depends on how the exposed Linked Data shall be used. If the application uses the exposed Linked Data only for querying data, the level is low and an application developer can learn it with spending some extra time. If the application itself shall use the Linked Data approach to store data (e.g. triple store) and/or do more advanced operations on Linked Data like link it with other (linked) datasets, manipulate it or reason over it, a higher level is needed and it is not done by spending some extra time. In this case inviting an expert to the development team, is a better approach.
 \end{itemize}
 
-
 \paragraph{A LOD application use case} 
 \label{technical-architecture-challenges:lod-effort:use-case}
 is the interaction of users with a developed application that makes use of LOD provided by the university. The application use case is the attempt to satisfy user requirements and becomes part of the information environment at the university. The exploration of interesting use cases from the student perspective was an essential part of the conducted interviews and the results can be seen in section \ref{lod-benefits-challenges:explored-needs-usecases}.
@@ -385,7 +384,7 @@ is the interaction of users with a developed application that makes use of LOD p
 
 \begin{figure}[t]
 \centering \includegraphics*[width=1.0\columnwidth]{images/technical-architecture/lod_technical_architecture.png}
-\caption{High level architecture for providing linked open data}
+\caption{High level architecture for providing Linked Open Data (adapted from EUCLID {\cite{simperl_using_2013}})}
 \label{fig:tac-high-level-architecture}
 \end{figure}
 
